# myproj

./: .cproject  .gitignore  1.txt  CMakeLists.txt  ofs.txt  path_company.txt  test0.cpp
example0/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  CAboutDlg.cpp  CAboutDlg.h  CMainFrame.cpp  CMainFrame.h  CMakeCache.txt  CMakeLists.txt  CSquaresApp.cpp  CSquaresApp.h  CSquaresDoc.cpp  CSquaresDoc.h  CSquaresView.cpp  CSquaresView.h  D.cpp  D.h  E.cpp  E.h  example0.rc  path_company.txt  resource.h
example34/: CMakeLists.txt  customer-odb.cxx  customer-odb.hxx  customer-odb.ixx  customer.cpp  customer.h  person-odb.cxx  person-odb.hxx  person-odb.ixx  person.cpp  person.h
monitor/src/: CDrawView.cpp  CDrawView.h  CMakeLists.txt  CMyFrameWnd.cpp  CMyFrameWnd.h  CMyWinApp.cpp  CMyWinApp.h  ChatDialog2.cpp  ChatDialog2.h  ChatView.cpp  ChatView.h  Client2.cpp  Client2.h  DealSocket.cpp  DealSocket.h  LogDialog.cpp  LogDialog.h  MyDialog.cpp  MyDialog.h  MyDocument.cpp  MyDocument.h  MyView.cpp  MyView.h  cmake_install.cmake  mfcde2.rc  mfcde2lib.vcxproj  mfcde2lib.vcxproj.filters  monitor.vcxproj  monitor.vcxproj.filters  resource.h  test.ini
src2/a0/: CMakeLists.txt  CMakeLists.txt.bak  CMyWinApp.cpp  ChangeIcon.cpp  Client.cpp  Client.h  ConnMysql.cpp  ConnMysql.h  ConnSocket.cpp  Crawler.cpp  DataCollection.h  DataOperator.cpp  DataOperator.h  DrawFlag.cpp  DrawFlag.h  GRPICONDIRENTRY.h  GeneRandom.h  ICONDIRENTRY.h  InteObj.cpp  InteObj.h  LoDiffeGlobal.cpp  LogOperator.cpp  LogOperator.h  MfcMulti.cpp  MfcMulti.h  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RecvThread.cpp  RecvThread.h  StruInte.h  abc.vcxproj  abc.vcxproj.filters  cmake_install.cmake  hello.vcxproj  hello.vcxproj.filters  parser_json.cpp  parser_json.h  rr_report.h  test.cpp  test.h
src_mfc/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CMyFrameWnd.cpp  CMyFrameWnd.h  CMyWinApp.cpp  MyDialog.h  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  detect.vcxproj  detect.vcxproj.filters  mfcde2.aps  mfcde2.rc  mfcde2.vcxproj  mfcde2.vcxproj.filters  mfcde2lib.vcxproj  mfcde2lib.vcxproj.filters  resource.h
test/src/: CMakeLists.txt  Client2Test.cpp  Client2Test.h  MyTest.cpp  MyTest.h  ReceiverTest.cpp  ReceiverTest.h  a.cpp
tetris/: A.cpp  A.h  A0.cpp  A0.h  Adto.cpp  Adto.h  ArrayDto.cpp  ArrayDto.h  CMakeLists.txt  CSockThread.cpp  CSockThread.h  Combination.cpp  Combination.h  Constants.cpp  Constants.h  Coordinates.cpp  Coordinates.h  CreateRandomThread.cpp  CreateRandomThread.h  Dto.cpp  Dto.h  ETherNet.cpp  ETherNet.h  LeftBrick.cpp  LeftBrick.h  MyApp.cpp  MyApp.h  MyDoc.cpp  MyDoc.h  MyFrame.cpp  MyFrame.h  MyView.cpp  MyView.h  Queue.cpp  Queue.h  Random.cpp  Random.h  Screen.cpp  Screen.h  Singleton.cpp  (+15 more)
xunan_admin/: A.cpp  A.h  AddBrandDlg.cpp  AddBrandDlg.h  AddClassDlg.cpp  AddClassDlg.h  AddCountryDlg.cpp  AddCountryDlg.h  AddGoodsDlg.cpp  AddGoodsDlg.h  AddVenue.cpp  AddVenue.h  CMakeLists.txt  CountryShow.cpp  CountryShow.h  ListGoodsDlg.cpp  MyApp.cpp  MyApp.h  MyCListCtrl.h  MyDoc.cpp  MyDoc.h  MyFrame.cpp  MyView.cpp  MyView.h  ShowJpg.cpp  ShowJpg.h  TestDlg.cpp  TestDlg.h  Util.cpp  Util.h  WatchClassDlg.cpp  WatchClassDlg.h  brand-odb.cxx  brand-odb.hxx  brand-odb.ixx  brand.cpp  brand.h  brand_dao.cpp  brand_dao.h  brand_service.cpp  (+64 more)
xunan_admin/base_ctrl/: BaseCtrl.cpp  BaseCtrl.h  CMakeLists.txt
xunan_admin/base_dlg/: BaseCountryDlg.cpp  BaseCountryDlg.h  BaseCouponsDlg.cpp  BaseCouponsDlg.h  BaseGoodDlg.cpp  BaseGoodDlg.h  CMakeLists.txt
xunan_admin/ctrl/: BigPicListCtrl.cpp  BigPicListCtrl.h  CImageListCtrl.cpp  CImageListCtrl.h  CMakeLists.txt  CountryCtrl.cpp  CountryCtrl.h  CountryListCtrl.cpp  CountryListCtrl.h  CutPicListCtrl.cpp  CutPicListCtrl.h  MyCListCtrl.cpp  MyCListCtrl.h  MyCTreeCtrl.cpp  MyCTreeCtrl.h  ctrl.vcxproj  ctrl.vcxproj.filters
xunan_admin/dao/: CMakeLists.txt  base_dao.cpp  base_dao.h  brand_dao.cpp  brand_dao.h  classification_dao.cpp  classification_dao.h  country_dao.cpp  country_dao.h  dao.vcxproj  dao.vcxproj.filters  file_dao.cpp  file_dao.h  good_dao.cpp  good_dao.h  good_file_dao.cpp  good_file_dao.h  upload_type_dao.cpp  upload_type_dao.h  venue_dao.cpp  venue_dao.h
xunan_admin/dlg/: AddBigPic4GoodDlg.cpp  AddBigPic4GoodDlg.h  AddBrandDlg.cpp  AddBrandDlg.h  AddClassDlg.cpp  AddClassDlg.h  AddCountryDlg.cpp  AddCountryDlg.h  AddCouponsDlg.cpp  AddCouponsDlg.h  AddGoodsDlg.cpp  AddGoodsDlg.h  AddVenue.cpp  AddVenue.h  BaseBigPic4GoodDlg.cpp  BaseBigPic4GoodDlg.h  BigPicDlg.cpp  BigPicDlg.h  CMakeLists.txt  CountryShow.cpp  CountryShow.h  Ctrain13_Dlg.cpp  Ctrain13_Dlg.h  EditBigPic4GoodDlg.cpp  EditBigPic4GoodDlg.h  EditCountryDlg.cpp  EditCountryDlg.h  EditGoodDlg.cpp  EditGoodDlg.h  ListGoodsDlg.cpp  MyDoc.cpp  MyDoc.h  MyFrame.cpp  MyFrame.h  MyView.cpp  MyView.h  TestDlg.cpp  TestDlg.h  WatchClassDlg.cpp  WatchClassDlg.h  (+3 more)
xunan_admin/dto/: CMakeLists.txt  file_dto.cpp  file_dto.h
xunan_admin/entity/: CMakeLists.txt  brand.h  classification.h  entity.vcxproj  entity.vcxproj.filters  file.cpp  file.h  good_file.cpp  goods.cpp  goods.h  upload_type.cpp  upload_type.h  venue.cpp  venue.h
xunan_admin/odb/: brand-odb.hxx  classification-odb.hxx  country-odb.cxx  country-odb.hxx  country-odb.ixx  file-odb.cxx  file-odb.hxx  file-odb.ixx  good_file-odb.hxx  good_file-odb.ixx  goods-odb.hxx  upload_type-odb.cxx  upload_type-odb.hxx  venue-odb.hxx
xunan_admin/service/: CMakeLists.txt  base_service.cpp  base_service.h  brand_service.cpp  brand_service.h  classification_service.cpp  classification_service.h  country_service.cpp  country_service.h  file_service.cpp  file_service.h  good_file_service.cpp  good_file_service.h  good_service.cpp  good_service.h  service.vcxproj  service.vcxproj.filters  upload_service.cpp  upload_service.h  upload_type_service.cpp  upload_type_service.h  venue_service.cpp  venue_service.h
xunan_admin/util/: CMakeLists.txt  Config.cpp  Config.h  Constants.cpp  Constants.h  ShowJpg.cpp  ShowJpg.h  (+12 more)
(+394 files in other folders)
